added news image, and also news pallets in the news.html and css respectively. added contact details to the contact.html and contact.css respectively

--- a/nav__links/contact.html
+++ b/nav__links/contact.html
@@ -25,7 +25,7 @@
                 <ul id="menuList">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../index.html">About Us</a></li>
-                    <li><a href="./department.html">Departments</a></li>
+                    <!-- <li><a href="./department.html">Departments</a></li> -->
                     <li><a href="./admission.html">Admission</a></li>
                     <li><a href="./alumni.html">Alumni</a></li>
                     <li><a href="./news.html">News</a></li>
@@ -56,8 +56,55 @@
         <button><a href="">Enroll Now</a></button>
     </div>
     <div class="main">
-        CONTACT
-        <div class="mainn"></div>
+
+        <div class="mainn">
+            <div class="contact_details">
+                <h2>
+                    Contact Us
+                </h2>
+                <p>We would love to hear from you and answer any questions you may have.</p>
+                <div class="contact_media">
+                    <div class="sch_telephone">
+                        <h3>Call us</h3>
+                        <span>School Administrator</span><br>
+                        <span>(+233 -0303-000000)</span>
+                        <br><br>
+                        <span>School Headmaster</span><br>
+                        <span>(+233 -0303-000000)</span>
+                        <br><br>
+                        <span>School Accountant</span><br>
+                        <span>(+233 -0303-000000)</span>
+                    </div>
+                    <div class="sch_email">
+                        <h3>Email us</h3>
+                        <span>staroftheeastschool@gmail.com</span>
+                    </div>
+                </div>
+            </div>
+            <div class="contact_form">
+                <h5 id="title">
+                    Send a message
+                </h5>
+                <p>Do you have any questions</p>
+                <h5>Your Name</h5>
+                <input type="text" name="name" placeholder="Enter your full name">
+                <br> <br>
+                <h5>Your Email: </h5>
+                <input type="text" name="email" placeholder="Your Email">
+                <br><br>
+                <h5>Your Subject:</h5>
+                <input type="text" name="subject" placeholder="Subject of your message">
+
+                <br><br>
+                <h5>Your message </h5>
+                <input type="text" name="message" placeholder="Type your message here">
+                <br>
+                <button>Submit</button>
+            </div>
+
+
+
+        </div>
     </div>
     <footer>
         <div class="inner_footer">
