--- a/nav__links/news.html
+++ b/nav__links/news.html
@@ -25,7 +25,7 @@
                 <ul id="menuList">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../index.html">About Us</a></li>
-                    <li><a href="./department.html">Departments</a></li>
+                    <!-- <li><a href="./department.html">Departments</a></li> -->
                     <li><a href="./admission.html">Admission</a></li>
                     <li><a href="./alumni.html">Alumni</a></li>
                     <li><a href="./news.html">News</a></li>
@@ -48,7 +48,7 @@
     <div class="slide_container">
         <h2>OUR NOTICE BOARD</h2>
         <P>Updates on what is going on in span START OF THE EAST and its environs.</P>
-        <button> SUBSCRIBE</button>
+        <button>VIEW</button>
 
     </div>
     <!-- admission notice  -->
@@ -57,8 +57,159 @@
         <button><a href="">Subscribe</a></button>
     </div>
     <div class="main">
-        NEWS
-        <div class="mainn"></div>
+        <h1>LATEST NEWS</h1>
+
+        <div class="mainn">
+            <div class="news_pallet">
+                <div class="news_header">
+                    <div class="news_image">
+                        <img src="../images/newspaper.svg" alt="">
+                    </div>
+                    <div class="news_title">
+                        <h3>THIS IS THE NEWS HEADING</h3>
+                    </div>
+                </div>
+                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
+                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                    placeat laborum commodi officiis esse vitae?</P>
+            </div>
+
+            <div class="news_pallet">
+                <div class="news_header">
+                    <div class="news_image">
+                        <img src="../images/newspaper.svg" alt="">
+                    </div>
+                    <div class="news_title">
+                        <h3>THIS IS THE NEWS HEADING</h3>
+                    </div>
+                </div>
+                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
+                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                    placeat laborum commodi officiis esse vitae?</P>
+            </div>
+
+            <div class="news_pallet">
+                <div class="news_header">
+                    <div class="news_image">
+                        <img src="../images/newspaper.svg" alt="">
+                    </div>
+                    <div class="news_title">
+                        <h3>THIS IS THE NEWS HEADING</h3>
+                    </div>
+                </div>
+                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
+                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                    placeat laborum commodi officiis esse vitae?</P>
+            </div>
+
+            <div class="news_pallet">
+                <div class="news_header">
+                    <div class="news_image">
+                        <img src="../images/newspaper.svg" alt="">
+                    </div>
+                    <div class="news_title">
+                        <h3>THIS IS THE NEWS HEADING</h3>
+                    </div>
+                </div>
+                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
+                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                    placeat laborum commodi officiis esse vitae?</P>
+            </div>
+
+            <div class="news_pallet">
+                <div class="news_header">
+                    <div class="news_image">
+                        <img src="../images/newspaper.svg" alt="">
+                    </div>
+                    <div class="news_title">
+                        <h3>THIS IS THE NEWS HEADING</h3>
+                    </div>
+                </div>
+                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
+                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                    placeat laborum commodi officiis esse vitae?</P>
+            </div>
+
+            <div class="news_pallet">
+                <div class="news_header">
+                    <div class="news_image">
+                        <img src="../images/newspaper.svg" alt="">
+                    </div>
+                    <div class="news_title">
+                        <h3>THIS IS THE NEWS HEADING</h3>
+                    </div>
+                </div>
+                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
+                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                    placeat laborum commodi officiis esse vitae?</P>
+            </div>
+
+            <div class="news_pallet">
+                <div class="news_header">
+                    <div class="news_image">
+                        <img src="../images/newspaper.svg" alt="">
+                    </div>
+                    <div class="news_title">
+                        <h3>THIS IS THE NEWS HEADING</h3>
+                    </div>
+                </div>
+                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
+                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                    placeat laborum commodi officiis esse vitae?</P>
+            </div>
+
+            <div class="news_pallet">
+                <div class="news_header">
+                    <div class="news_image">
+                        <img src="../images/newspaper.svg" alt="">
+                    </div>
+                    <div class="news_title">
+                        <h3>THIS IS THE NEWS HEADING</h3>
+                    </div>
+                </div>
+                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
+                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                    placeat laborum commodi officiis esse vitae?</P>
+            </div>
+
+            <div class="news_pallet">
+                <div class="news_header">
+                    <div class="news_image">
+                        <img src="../images/newspaper.svg" alt="">
+                    </div>
+                    <div class="news_title">
+                        <h3>THIS IS THE NEWS HEADING</h3>
+                    </div>
+                </div>
+                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
+                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                    placeat laborum commodi officiis esse vitae?</P>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
     <footer>
         <div class="inner_footer">
