--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul id="menuList">
                     <li><a href="#">Home</a></li>
                     <!-- <li><a href="#about_us">About Us</a></li> -->
-                    <li><a href="./nav__links/department.html">Departments</a></li>
+                    <!-- <li><a href="./nav__links/department.html">Departments</a></li> -->
                     <li><a href="./nav__links/admission.html">Admission</a></li>
                     <li><a href="./nav__links/alumni.html">Alumni</a></li>
                     <li><a href="./nav__links/news.html">News</a></li>
