--- a/nav__links/scholarships.html
+++ b/nav__links/scholarships.html
@@ -25,7 +25,7 @@
                 <ul id="menuList">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../index.html">About Us</a></li>
-                    <li><a href="./department.html">Departments</a></li>
+                    <!-- <li><a href="./department.html">Departments</a></li> -->
                     <li><a href="./admission.html">Admission</a></li>
                     <li><a href="./alumni.html">Alumni</a></li>
                     <li><a href="./news.html">News</a></li>
