updated the css files in the nav links  for the mobile view of the site

--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
         <div class="about_us">
 
             <h2 id="about_us" style="color: rgb(255, 255, 255);">#</h2>
-            <h2 id="about_us"> ---- ABOUT US
-                ----
-            </h2>
+            <h2 id="about_us"> ---- ABOUT US ----</h2>
             <div class="about_msg">
                 <div class="headmistress_image"></div>
                 <div class="about_text">
@@ -74,24 +72,12 @@
                         nostrum enim debitis labore quae iure ut aperiam architecto ea natus, ipsa voluptatem quasi
                         aliquam
                         odio modi quis, incidunt consectetur! Iure nemo nihil veniam dolorum alias aspernatur quo illum
-                        repellendus impedit consequatur voluptatct nam nemo voluptatem
-                        accusantium voluptates assumenda laborum praesentium molestiae quibusdam. uptatibus inventore ex
-                        nostrum enim debitis labore quae iure ut aperiam architecto ea natus, ipsa voluptatem quasi
-                        aliquam
-                        odio modi quis, incidunt consectetur! Iure nemo nihil veniam dolorum alias aspernatur quo illum
-                        repellendus impedit consequatur voluptatct nam nemo voluptatem
-                        accusantium voluptates assumenda laborum praesentium molestiae quibusdam. uptatibus inventore ex
-                        nostrum enim debitis labore quae iure ut aperiam architecto ea natus, ipsa voluptatem quasi
-                        aliquam
-                        odio modi quis, incidunt consectetur! Iure nemo nihil veniam dolorum alias aspernatur quo illum
-                        repellendus impedit consequatur voluptatct nam nemo voluptatem
-                        accusantium voluptates assumenda laborum praesentium molestiae quibusdam. uptatibus inventore ex
+                        repees as assumenda laborum praesentium molestiae quibusdam. uptatibus inventore ex
                         nostrum enim debitis labore quae iure ut aperiam architecto ea natus, ipsa voluptatem quasi
                         aliquam
                         odio modi quis, incidunt consectetur! Iure nemo nih
                         ncidunt consectetur! Iure nemo nihil veniam dolorum alias aspernatur quo illum
-                        repellendus impedit consequatur voluptatct nam nemo voluptatem
-                        accusantium voluptates assumenda laborum praesentium molestiae quibusdam. uptatibus inventore ex
+                        repellendus assumenda laborum praesentium molestiae quibusdam. uptatibus inventore ex
                         nostrum enim debitis labore quae iure ut aperiam architecto ea natus, ipsa voluptatem quasi
                         aliquam
 
