--- a/nav__links/admission.html
+++ b/nav__links/admission.html
@@ -49,7 +49,7 @@
 
         <h2>JOIN THE COMMUNITY OF EXCELLENCE</h2>
         <P>Enroll your child today, sit back and watch the success story.</P>
-        <button> ENROLL </button>
+        <button> <a href="#steps"> ENROLL</a> </button>
 
     </div>
     <!-- admission notice  -->
@@ -59,51 +59,75 @@
     </div>
     <div class="main">
 
+        <span id="steps"></span>
+        <h4 style="margin: 30px 0px; ">Follow the steps below to complete the admission process</h4>
         <div class="mainn">
             <div class="admission_steps">
                 <div class="step">
-                    <div class="step_number">
-                        <h1>1</h1>
+                    <div class="step_title">
+                        <div class="step_number">
+                            <h1>1</h1>
+                        </div>
+                        <div class="step_heading">
+                            <span>Download registration form</span><br><br>
+                        </div>
+
                     </div>
-                    <div class="step_heading">
-                        <span>Download registration form</span><br><br>
-                    </div>
+
                     <p>Download the form uisng the link below, print and submit a copy to the admission office</p><br>
-                    <button>Download form</button>
+                    <button>Download form </button>
                 </div>
+
+
                 <div class="step">
-                    <div class="step_number">
-                        <h1>2</h1>
+                    <div class="step_title">
+                        <div class="step_number">
+                            <h1>2</h1>
+                        </div>
+                        <div class="step_heading">
+                            <span>Provision of other relevant documents</span><br><br>
+                        </div>
+
                     </div>
-                    <div class="step_heading">
-                        <span>Provision of other relevant documents</span><br><br>
-                    </div>
+
                     <ul>
                         <li>The last 2 term's academic results from previous school</li><br>
                         <li> A copy of the student's birth certificate</li><br>
                         <li>Two passport-sized photos</li>
                     </ul>
                 </div>
+
+
                 <div class="step">
-                    <div class="step_number">
-                        <h1>3</h1>
+                    <div class="step_title">
+                        <div class="step_number">
+                            <h1>3</h1>
+                        </div>
+                        <div class="step_heading">
+                            <span>Completer entrance examination (Maths and English)</span><br><br>
+                        </div>
+
                     </div>
-                    <div class="step_heading">
-                        <span>Completer entrance examination (Maths and English)</span><br><br>
-                    </div>
+
                     <p>Examinations are usually scheduled at the beginning of a new academic semester. The exams is also
                         open for mid stream admission students who may seek admission. <br><br>
 
                         Students will only be permitted to write the entrance exam if there are vacancies in the class
                         they require.</p>
                 </div>
+
+
                 <div class="step">
-                    <div class="step_number">
-                        <h1>4</h1>
+                    <div class="step_title">
+                        <div class="step_number">
+                            <h1>4</h1>
+                        </div>
+                        <div class="step_heading">
+                            <span>Fews steps after admission</span>
+                        </div>
+
                     </div>
-                    <div class="step_heading">
-                        <span>Fews steps after admission</span>
-                    </div>
+
 
                     <ul>
                         <li>Place is subject to payment of admission and termly tuition fee.</li><br>
@@ -116,6 +140,8 @@
             </div>
         </div>
     </div>
+
+
     <footer>
         <div class="inner_footer">
             <div class="school_contact_info">
