--- a/nav__links/alumni.html
+++ b/nav__links/alumni.html
@@ -46,7 +46,8 @@
 
     </div>
     <div class="slide_container">
-        <h2>BEYOND OUR GREAT WALLS</h2>
+        <!-- <h2>BEYOND OUR GREAT WALLS</h2> -->
+        <h2>THIS PAGE IS UNDER CONSTRUCTION</h2>
         <P>Join our great Alumni network today</P>
         <button> CONNECT</button>
 
@@ -54,10 +55,10 @@
     <!-- admission notice  -->
     <div class="admission_notice">
         <h2>ADMISSION OPEN FOR 2023 ACADEMIC YEAR</h2>
-        <button><a href="">Enroll Now</a></button>
+        <button><a href="./admission.html">Enroll Now</a></button>
     </div>
     <div class="main">
-        ALUMNI
+        NOTHING TO SHOW
         <div class="mainn"></div>
     </div>
     <footer>
