--- a/nav__links/contact.html
+++ b/nav__links/contact.html
@@ -48,16 +48,17 @@
     <div class="slide_container">
         <h2>OUR CONTACTS AND LOCATION</h2>
         <P>Reach to Us. We are all ears</P>
-        <button> FIND US</button>
+        <button> <a href="#contact_details">FIND US</a> </button>
     </div>
     <!-- admission notice  -->
     <div class="admission_notice">
         <h2>ADMISSION OPEN FOR 2023 ACADEMIC YEAR</h2>
-        <button><a href="">Enroll Now</a></button>
+        <button><a href="./admission.html">Enroll Now</a></button>
     </div>
     <div class="main">
 
-        <div class="mainn">
+        <div class="mainn" id="contact_details">
+            <span id="contact_details"></span>
             <div class="contact_details">
                 <h2>
                     Contact Us
