--- a/nav__links/news.html
+++ b/nav__links/news.html
@@ -48,7 +48,7 @@
     <div class="slide_container">
         <h2>OUR NOTICE BOARD</h2>
         <P>Updates on what is going on in span START OF THE EAST and its environs.</P>
-        <button>VIEW</button>
+        <button> <a href="#view">VIEW</a> </button>
 
     </div>
     <!-- admission notice  -->
@@ -57,7 +57,7 @@
         <button><a href="">Subscribe</a></button>
     </div>
     <div class="main">
-        <h1>LATEST NEWS</h1>
+        <h1 id="view">LATEST NEWS</h1>
 
         <div class="mainn">
             <div class="news_pallet">
@@ -66,11 +66,11 @@
                         <img src="../images/newspaper.svg" alt="">
                     </div>
                     <div class="news_title">
-                        <h3>THIS IS THE NEWS HEADING</h3>
+                        <h3> NEWS HEADING</h3>
                     </div>
                 </div>
-                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
-                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                <P>Lorem ipsum dolor sit amet consecpiditate qui fugit
+                    blanditiis nobis facere similique temre molestiae labore incidunt! Reiciendis nobis
                     placeat laborum commodi officiis esse vitae?</P>
             </div>
 
@@ -80,11 +80,11 @@
                         <img src="../images/newspaper.svg" alt="">
                     </div>
                     <div class="news_title">
-                        <h3>THIS IS THE NEWS HEADING</h3>
+                        <h3> NEWS HEADING</h3>
                     </div>
                 </div>
-                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
-                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                <P>Lorem ipsum dolor sit amet consecpiditate qui fugit
+                    blanditiis nobis facere similique temre molestiae labore incidunt! Reiciendis nobis
                     placeat laborum commodi officiis esse vitae?</P>
             </div>
 
@@ -94,11 +94,11 @@
                         <img src="../images/newspaper.svg" alt="">
                     </div>
                     <div class="news_title">
-                        <h3>THIS IS THE NEWS HEADING</h3>
+                        <h3> NEWS HEADING</h3>
                     </div>
                 </div>
-                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
-                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                <P>Lorem ipsum dolor sit amet consecpiditate qui fugit
+                    blanditiis nobis facere similique temre molestiae labore incidunt! Reiciendis nobis
                     placeat laborum commodi officiis esse vitae?</P>
             </div>
 
@@ -108,11 +108,11 @@
                         <img src="../images/newspaper.svg" alt="">
                     </div>
                     <div class="news_title">
-                        <h3>THIS IS THE NEWS HEADING</h3>
+                        <h3> NEWS HEADING</h3>
                     </div>
                 </div>
-                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
-                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                <P>Lorem ipsum dolor sit amet consecpiditate qui fugit
+                    blanditiis nobis facere similique temre molestiae labore incidunt! Reiciendis nobis
                     placeat laborum commodi officiis esse vitae?</P>
             </div>
 
@@ -122,11 +122,11 @@
                         <img src="../images/newspaper.svg" alt="">
                     </div>
                     <div class="news_title">
-                        <h3>THIS IS THE NEWS HEADING</h3>
+                        <h3> NEWS HEADING</h3>
                     </div>
                 </div>
-                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
-                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                <P>Lorem ipsum dolor sit amet consecpiditate qui fugit
+                    blanditiis nobis facere similique temre molestiae labore incidunt! Reiciendis nobis
                     placeat laborum commodi officiis esse vitae?</P>
             </div>
 
@@ -136,11 +136,11 @@
                         <img src="../images/newspaper.svg" alt="">
                     </div>
                     <div class="news_title">
-                        <h3>THIS IS THE NEWS HEADING</h3>
+                        <h3> NEWS HEADING</h3>
                     </div>
                 </div>
-                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
-                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                <P>Lorem ipsum dolor sit amet consecpiditate qui fugit
+                    blanditiis nobis facere similique temre molestiae labore incidunt! Reiciendis nobis
                     placeat laborum commodi officiis esse vitae?</P>
             </div>
 
@@ -150,11 +150,11 @@
                         <img src="../images/newspaper.svg" alt="">
                     </div>
                     <div class="news_title">
-                        <h3>THIS IS THE NEWS HEADING</h3>
+                        <h3> NEWS HEADING</h3>
                     </div>
                 </div>
-                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
-                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                <P>Lorem ipsum dolor sit amet consecpiditate qui fugit
+                    blanditiis nobis facere similique temre molestiae labore incidunt! Reiciendis nobis
                     placeat laborum commodi officiis esse vitae?</P>
             </div>
 
@@ -164,11 +164,11 @@
                         <img src="../images/newspaper.svg" alt="">
                     </div>
                     <div class="news_title">
-                        <h3>THIS IS THE NEWS HEADING</h3>
+                        <h3> NEWS HEADING</h3>
                     </div>
                 </div>
-                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
-                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                <P>Lorem ipsum dolor sit amet consecpiditate qui fugit
+                    blanditiis nobis facere similique temre molestiae labore incidunt! Reiciendis nobis
                     placeat laborum commodi officiis esse vitae?</P>
             </div>
 
@@ -178,86 +178,85 @@
                         <img src="../images/newspaper.svg" alt="">
                     </div>
                     <div class="news_title">
-                        <h3>THIS IS THE NEWS HEADING</h3>
+                        <h3> NEWS HEADING</h3>
                     </div>
                 </div>
-                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores eligendi, cupiditate qui fugit
-                    blanditiis nobis facere similique temporibus dolore molestiae labore incidunt! Reiciendis nobis
+                <P>Lorem ipsum dolor sit amet consecpiditate qui fugit
+                    blanditiis nobis facere similique temre molestiae labore incidunt! Reiciendis nobis
                     placeat laborum commodi officiis esse vitae?</P>
             </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </div>
-    <footer>
-        <div class="inner_footer">
-            <div class="school_contact_info">
-                <div class="logo">
-                    <img src="../images/SCHOOL LOGO REDEFINED.png" alt="">
-                    <div class="school_name">
-                        <H3 id="sch_name">STAR OF THE EAST</H3>
-                        <H3 id="inst_type">SCHOOL COMPLEX</H3>
+        <footer>
+            <div class="inner_footer">
+                <div class="school_contact_info">
+                    <div class="logo">
+                        <img src="../images/SCHOOL LOGO REDEFINED.png" alt="">
+                        <div class="school_name">
+                            <H3 id="sch_name">STAR OF THE EAST</H3>
+                            <H3 id="inst_type">SCHOOL COMPLEX</H3>
+                        </div>
                     </div>
-                </div>
-                <br>
-                <h4>ADDRESS</h4>
-                <H4>MAIN CAMPUS, TAIFA NOWAY</H4>
-                <H4>BEHIND PRUDENTIAL BANK</H4>
+                    <br>
+                    <h4>ADDRESS</h4>
+                    <H4>MAIN CAMPUS, TAIFA NOWAY</H4>
+                    <H4>BEHIND PRUDENTIAL BANK</H4>
 
-                <H4>TEL: 030 440 3030</H4>
-                <H4>EMAIL: staroftheeastschoolcomplex@gmail.com</H4>
-            </div>
-            <br><br>
-            <div class="school_links">
-                <div class="navs">
-                    <ul>
-                        <li><a href="./scholarships.html">Scholarships</a></li>
-                        <li><a href="./exchange_programme.html">Exchange Programs</a></li>
-                        <li><a href="./alumni.html">Alumni</a></li>
-                        <li><a href="./gallery.html">School Gallery</a></li>
-                        <li><a href="./news.html">News</a></li>
-                        <li><a href="./Faqs.html">FAQS</a></li>
-                    </ul>
-                </div>
-                <h4>CONNECT WITH US</h4>
-                <div class="social_links">
-                    <a href=""><img src="../images/facebook.png" alt="facebook"></a>
-                    <a href=""><img src="../images/instagram.png" alt="instagram"></a>
-                    <a href=""><img src="../images/twitter.png" alt="twitter"></a>
-                    <a href="https://wa.me/qr/VEG2OVZKT65LH1"><img src="../images/whatsapp.png" alt="whatsapp"></a>
+                    <H4>TEL: 030 440 3030</H4>
+                    <H4>EMAIL: staroftheeastschoolcomplex@gmail.com</H4>
                 </div>
                 <br><br>
-                <div class="copyright_info">
-                    <h4>&copy; 2023 Star of The East School Complex</h4>
+                <div class="school_links">
+                    <div class="navs">
+                        <ul>
+                            <li><a href="./scholarships.html">Scholarships</a></li>
+                            <li><a href="./exchange_programme.html">Exchange Programs</a></li>
+                            <li><a href="./alumni.html">Alumni</a></li>
+                            <li><a href="./gallery.html">School Gallery</a></li>
+                            <li><a href="./news.html">News</a></li>
+                            <li><a href="./Faqs.html">FAQS</a></li>
+                        </ul>
+                    </div>
+                    <h4>CONNECT WITH US</h4>
+                    <div class="social_links">
+                        <a href=""><img src="../images/facebook.png" alt="facebook"></a>
+                        <a href=""><img src="../images/instagram.png" alt="instagram"></a>
+                        <a href=""><img src="../images/twitter.png" alt="twitter"></a>
+                        <a href="https://wa.me/qr/VEG2OVZKT65LH1"><img src="../images/whatsapp.png" alt="whatsapp"></a>
+                    </div>
+                    <br><br>
+                    <div class="copyright_info">
+                        <h4>&copy; 2023 Star of The East School Complex</h4>
+                    </div>
                 </div>
-            </div>
-            <br><br>
+                <br><br>
 
-        </div>
-    </footer>
-    <script src="../main.js"></script>
+            </div>
+        </footer>
+        <script src="../main.js"></script>
 </body>
 </div>
 
